--- a/app/views/pages/bio.html.erb
+++ b/app/views/pages/bio.html.erb
@@ -27,7 +27,7 @@
 					<h5 class="main-text-header"><strong>JIM - DRUMS, VOCALS</strong></h5>
 					<p class="main-text"><strong>Drums</strong> - Tama Starclassic Bubinga. Tama John Tempesta snare or Black Panther 'The Blaster'.</p>
 					<p class="main-text"><strong>Cymbals</strong> - Zildjian, Meinl & Dream.</p>
-					<p class="main-text"><strong>Sticks</strong> - Promark Super Rock Classics</p>
+					<p class="main-text"><strong>Sticks</strong> - Promark Super Rock</p>
 				</div>
 				<div class="col-lg highlight-background">
 					<h5 class="main-text-header"><strong>ISAAC - GUITAR, VOCALS</strong></h5>	
