--- a/app/views/pages/bio.html.erb
+++ b/app/views/pages/bio.html.erb
@@ -19,20 +19,20 @@
 			<div class="row">
 				<div class="col-lg highlight-background">
 					<h5 class="main-text-header"><strong>RABID - BASS, VOCALS</strong></h5>
-					<p class="main-text"><strong>Bass Guitar</strong> - Spector Custom, Sandberg VM-4, Sandberg Electra</p>
-					<p class="main-text"><strong>Amplification</strong> - Hartke LH1000 & Tech 21 Sansamp VT Rackmount, Korg Pitchblack Tuner, Hartke Hydrive 4x10 & 1x15 Speaker Cabs.</p>
+					<p class="main-text"><strong>Bass Guitar</strong> - Fender USA Precision, Fender JP-90, Spector Custom</p>
+					<p class="main-text"><strong>Amplification</strong> - Hartke LH1000 & Tech 21 Sansamp VT Rackmount, Korg Pitchblack Tuner, Hartke Hydrive 4x10 & 1x15 Speaker Cabs</p>
 					<p class="main-text"><strong>Pedals</strong> - None</p>
 				</div>
 				<div class="col-lg highlight-background">
 					<h5 class="main-text-header"><strong>JIM - DRUMS, VOCALS</strong></h5>
-					<p class="main-text"><strong>Drums</strong> - Tama Starclassic Bubinga. Tama John Tempesta snare or Black Panther 'The Blaster'.</p>
-					<p class="main-text"><strong>Cymbals</strong> - Zildjian, Meinl & Dream.</p>
+					<p class="main-text"><strong>Drums</strong> - Tama Starclassic Bubinga. Tama John Tempesta snare or Black Panther 'The Blaster'</p>
+					<p class="main-text"><strong>Cymbals</strong> - Zildjian, Meinl & Dream</p>
 					<p class="main-text"><strong>Sticks</strong> - Promark Super Rock</p>
 				</div>
 				<div class="col-lg highlight-background">
 					<h5 class="main-text-header"><strong>ISAAC - GUITAR, VOCALS</strong></h5>	
 					<p class="main-text"><strong>Guitar</strong> - Wez Venables Vociferator</p>
-					<p class="main-text"><strong>Amplification</strong> - Peavey 5150-ll, Celestion and EVM Speakers.</p>
+					<p class="main-text"><strong>Amplification</strong> - Peavey 5150-II, Celestion and EVM Speakers</p>
 					<p class="main-text"><strong>Pedals</strong> - Bodenhamer 'Bloody Murder' & TC Polytune-2</p>
 				</div>
 			</div>
